Home - 16 may commit - problem with appending session id still persists

--- a/app/webroot/css/index.css
+++ b/app/webroot/css/index.css
@@ -275,4 +275,9 @@
 	font-size: large;
 	font-weight: bold;
 	color: #999999;
-}	
+}
+
+div.pagination {
+	text-align: right;
+	padding-right: 50px;
+}
